--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -258,7 +258,7 @@
             {% for city in cities %}
             <div class="col-md-4 col-sm-6 col-12 p-3 text-center">
                 <ul class="list-unstyled">
-                    <li><a href="" class="text-decoration-none fw-bold">{{city.city}}</a></li>
+                    <li><a href="{% url 'roomlist' %}?city={{ city.id }}" class="btn ">{{ city.city }}</a></li>
                 </ul>
             </div>
             {% endfor %}
