--- a/core/templates/core/roomlist.html
+++ b/core/templates/core/roomlist.html
@@ -14,7 +14,9 @@
                     <select name="searched_city" class="form-select mb-2">
                         <option value="">Select City</option>
                         {% for city in cities %}
-                        <option value="{{ city.id }}">{{city.city}}</option>
+                        <option value="{{ city.id }}" {% if selected_city_id == city.id|stringformat:"s" %}selected{% endif %}>
+                            {{city.city}}
+                        </option>
                         {% endfor %}
                     </select>
                     <button type="submit" class="btn btn-roomlist-sidebar w-100 fw-bold">Search</button>
@@ -49,10 +51,10 @@
                 <ul class="pagination justify-content-center mt-4 ms-5">
                     {% if all_rooms.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page=1">First</a>
+                        <a class="page-link" href="?{% if selected_city_id %}city={{ selected_city_id }}&{% endif %}page=1">First</a>
                     </li>
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ all_rooms.previous_page_number }}">Previous</a>
+                        <a class="page-link" href="?{% if selected_city_id %}city={{ selected_city_id }}&{% endif %}page={{ all_rooms.previous_page_number }}">Previous</a>
                     </li>
                     {% endif %}
 
@@ -62,10 +64,10 @@
 
                     {% if all_rooms.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ all_rooms.next_page_number }}">Next</a>
+                        <a class="page-link" href="?{% if selected_city_id %}city={{ selected_city_id }}&{% endif %}page={{ all_rooms.next_page_number }}">Next</a>
                     </li>
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ all_rooms.paginator.num_pages }}">Last</a>
+                        <a class="page-link" href="?{% if selected_city_id %}city={{ selected_city_id }}&{% endif %}page={{ all_rooms.paginator.num_pages }}">Last</a>
                     </li>
                     {% endif %}
                 </ul>
