--- a/core/templates/include/footer.html
+++ b/core/templates/include/footer.html
@@ -28,8 +28,8 @@
                 <!-- Contact Section -->
                 <div class="col-md-4 mb-4">
                     <h5>Contact</h5>
-                    <p>Email: roomrental@example.com</p>
-                    <p>Phone: +123 456 7890</p>
+                    <p>Email: roomrental@gmail.com</p>
+                    <p>Phone: +977 9800000001</p>
                     <div class="social-icons">
                         <a class="footer-icons" href="#"><i class="fab fa-facebook"></i></a>
                         <a class="footer-icons" href="#"><i class="fab fa-twitter"></i></i></a>
