--- a/core/templates/include/sidebar.html
+++ b/core/templates/include/sidebar.html
@@ -11,6 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/seller/seller_dashboard.css' %}">
     <link rel="stylesheet" href="{% static 'css/seller/renew_subs.css' %}">
+    <link rel="stylesheet" href="{% static 'css/seller/customer_contact.css' %}">
 <style>
 
 .seller-fa-bell{
@@ -77,6 +78,8 @@
 
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_subscription' %}"><i class="fas fa-clipboard-list me-2"></i>
                         Subscription</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_contact' %}"><i class="fas fa-headset me-2"></i>
+                        Contact</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
                         Profile</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'logout_user' %}"><i class="fas fa-sign-out-alt me-2"></i>
@@ -123,6 +126,8 @@
                     {% endif %}
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_subscription' %}"><i class="fas fa-clipboard-list me-2"></i>
                             Subscription</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_contact' %}">    <i class="fas fa-headset me-2"></i>
+                            Contact</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
                             Profile</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'logout_user' %}"><i class="fas fa-sign-out-alt me-2"></i>
