debugging and fixing some minor issue related with fetching rooms and payment and add new logic

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -152,6 +152,10 @@
                                             <p class="m-0 text-secondary text-center">Don't have an account? <a
                                                     href="{% url 'choose_registration' %}" class="link-primary text-decoration-none">Sign up</a></p>
                                         </div>
+                                        <div class="col-12">
+                                            <p class="m-0 text-secondary text-center"> <a
+                                                    href="{% url 'homepage' %}" class="link-primary text-decoration-none">Back to home</a></p>
+                                        </div>
                                     </div>
                                 </form>
                             </div>
