implement password change through email verification

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -66,7 +66,7 @@
                                 <label for="password" class="form-label fw-medium">Password</label>
                                 <input type="password" class="form-control" name="password" id="password" placeholder="Enter your password" required>
                                 <div class="text-end mt-2">
-                                    <a href="#!" class="text-decoration-none theme-text">Forgot password?</a>
+                                    <a href="{% url 'password_reset' %}" class="text-decoration-none theme-text">Forgot password?</a>
                                 </div>
                             </div>
                             
